# AquaCore

backend/: pyproject.toml
backend/src/: database.py  main.py  models_registry.py
backend/src/admin/: router.py  schemas.py  service.py
backend/src/aquariums/: models.py  router.py  schemas.py  service.py
backend/src/auth/: models.py  router.py  schemas.py  service.py
backend/src/catalog/: models.py  router.py  schemas.py  service.py
backend/src/core/: calculators.py  router.py  schemas.py
backend/src/db/: database.py  models.py
backend/src/media/: models.py
backend/src/monitoring/: models.py  router.py  schemas.py  service.py
backend/src/social/: models.py
backend/src/tasks/: models.py  router.py  service.py
backend/src/users/: models.py  router.py  schemas.py  service.py
esp32_aqua_core/: .gitignore  platformio.ini
esp32_aqua_core/src/: main.cpp
